force-app/main/default/objects/MUSW__Receipt__c/MUSW__Receipt__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Payments Collected</description>
    <label>Receipt</label>
    <nameField>
        <displayFormat>R-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>