force-app/main/default/objects/MUSW__Receipt__c/fields/BGBK__Cart__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cart</label>
    <referenceTo>BGBK__Cart__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>