force-app/main/default/objects/MUSW__Receipt__c/fields/MUSW__Amount_Refunded__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Amount_Refunded__c</fullName>
    <label>Amount Refunded</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>