force-app/main/default/objects/MUSW__Receipt__c/fields/MUSW__Change__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Change__c</fullName>
    <label>Change</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>