force-app/main/default/objects/MUSW__Receipt__c/fields/MUSW__Comments__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>