force-app/main/default/objects/MUSW__Receipt__c/fields/MUSW__Deposit_Available__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Deposit_Available__c</fullName>
    <formula>MUSW__Deposit_Amount__c - MUSW__Deposit_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>