force-app/main/default/objects/MUSW__Receipt__c/fields/MUSW__Deposit_Used__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Deposit_Used__c</fullName>
    <label>Deposit Used</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>