force-app/main/default/objects/MUSW__Receipt__c/fields/MUSW__License1__c.field-meta.xml
<CustomField>
    <fullName>MUSW__License1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License</label>
    <referenceTo>MUSW__License1__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>