force-app/main/default/objects/MUSW__Receipt__c/fields/MUSW__Paid_By__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Paid_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paid By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Receipts (Paid By)</relationshipLabel>
    <relationshipName>Receipts_Paid_by</relationshipName>
    <type>Lookup</type>
</CustomField>