force-app/main/default/objects/MUSW__Receipt__c/fields/MUSW__Receipt_Paid_By__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Receipt_Paid_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Payee</inlineHelpText>
    <label>Receipt Paid By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Receipts Paid</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>