force-app/main/default/objects/MUSW__Receipt__c/fields/MUSW__Refunded__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Refunded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Full amount has been refunded</inlineHelpText>
    <label>Refunded In Full</label>
    <type>Checkbox</type>
</CustomField>